<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff000000"
>
    <LinearLayout
        android:id="@+id/simplePad"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
    >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
        >    
            <TextView
                android:id="@+id/txtAnswer"
                android:text=""
                style="@style/answer_style"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
        >
            <com.xprime.iCalc.ColorButton
                android:id="@+id/adel"
                android:text="@string/allclear"
                style="@style/button_style"
            />
            <com.xprime.iCalc.ColorButton
                android:id="@+id/del"
                android:text="@string/clear"
                style="@style/button_style"
            />
            <com.xprime.iCalc.ColorButton
                android:id="@+id/plusminus"
                android:text="@string/plusminus"
                style="@style/button_style"
            />
            <com.xprime.iCalc.ColorButton
                android:id="@+id/perc"
                android:text="@string/perc"
                style="@style/button_style"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
        >
            <com.xprime.iCalc.ColorButton
                android:id="@+id/digit7"
                android:text="@string/digit7"
                style="@style/digit_button_style"
            />
			<com.xprime.iCalc.ColorButton
                android:id="@+id/digit8"
                android:text="@string/digit8"
                style="@style/digit_button_style"
            />
			<com.xprime.iCalc.ColorButton
                android:id="@+id/digit9"
                android:text="@string/digit9"
                style="@style/digit_button_style"
            />
            <com.xprime.iCalc.ColorButton
                android:id="@+id/div"
                android:text="@string/div"
                style="@style/button_style"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
        >
            <com.xprime.iCalc.ColorButton
                android:id="@+id/digit4"
                android:text="@string/digit4"
                style="@style/digit_button_style"
            />
			<com.xprime.iCalc.ColorButton
                android:id="@+id/digit5"
                android:text="@string/digit5"
                style="@style/digit_button_style"
            />
			<com.xprime.iCalc.ColorButton
                android:id="@+id/digit6"
                android:text="@string/digit6"
                style="@style/digit_button_style"
            />
            <com.xprime.iCalc.ColorButton
                android:id="@+id/mul"
                android:text="@string/mul"
                style="@style/button_style"
            />
        </LinearLayout>
		<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
        >
            <com.xprime.iCalc.ColorButton
                android:id="@+id/digit1"
                android:text="@string/digit1"
                style="@style/digit_button_style"
            />
			<com.xprime.iCalc.ColorButton
                android:id="@+id/digit2"
                android:text="@string/digit2"
                style="@style/digit_button_style"
            />
			<com.xprime.iCalc.ColorButton
                android:id="@+id/digit3"
                android:text="@string/digit3"
                style="@style/digit_button_style"
            />
            <com.xprime.iCalc.ColorButton
                android:id="@+id/minus"
                android:text="@string/minus"
                style="@style/button_style"
            />
        </LinearLayout>
		<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
        >
            <com.xprime.iCalc.ColorButton
                android:id="@+id/dot"
                android:text="@string/dot"
                style="@style/digit_button_style"
            />
            <com.xprime.iCalc.ColorButton
                android:id="@+id/digit0"
                android:text="@string/digit0"
                style="@style/digit_button_style"
            />
            <com.xprime.iCalc.ColorButton
                android:id="@+id/digit00"
                android:text="@string/digit00"
                style="@style/digit_button_style"
            />
            <com.xprime.iCalc.ColorButton
                android:id="@+id/plus"
                android:text="@string/plus"
                style="@style/button_style"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
        >
            <com.xprime.iCalc.ColorButton
                android:id="@+id/equal"
                android:text="@string/equal"
                style="@style/yellow_button_style"
            />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
